remove un-used files

--- a/index.html
+++ b/index.html
@@ -4,20 +4,12 @@
 		<meta charset="utf-8">
 		<title>Go-Labs balls logo</title>
 		<link rel="shortcut icon" href="favicon.ico">
-		<link rel="stylesheet" href="style/screen.css" type="text/css">
 		<link rel="stylesheet" href="css/main.css"/>
 	</head>
 	<body>
-		<div class="container">
-			<section class="content">
-				<div class="row">
-					<section class="span10 offset3">
-						<canvas id="c" width="400" height="400"></canvas>
-					</section>
-				</div>
-			</section>
-		</div>
-
+		<section>
+			<canvas id="c" width="400" height="400"></canvas>
+		</section>
 		<script src="js/jquery-2.1.4.min.js"></script>
 		<script src="js/main.js"></script>
 	</body>
