--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 			<canvas id="c" width="400" height="400"></canvas>
 		</section>
 		<script src="https://code.jquery.com/jquery-2.2.3.min.js"></script>
-		<script src="https://raw.githubusercontent.com/go-labs/bubble_logo/master/js/main.js"></script>
+		<script src="./main.js"></script>
 	</body>
 </html>
